<resources>
    <string name="app_name">DLF+</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="cover">Course Cover</string>
    <string name="title_placeholder_text">Placeholder Text </string>
    <string name="dummy_goto_forum">Go to forum</string>
    <string name="my_forums">My Forums</string>
    <string name="home">Home</string>
    <string name="user_profile">User Profile</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="create_topic">Create topic</string>
    <string name="create">Create</string>
    <string name="cancel">Cancel</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="edit_topic">Edit Topic</string>
    <string name="edit">Edit</string>
    <string name="delete_topic">Delete topic</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Netfang</string>
    <string name="prompt_password">Lykilorð</string>
    <string name="action_sign_in">Skrá inn notanda</string>
    <string name="action_sign_in_short">Innskráning</string>
    <string name="welcome">"Velkomin/n!"</string>
    <string name="invalid_username">Ekki viðurkennt netfang</string>
    <string name="invalid_password">Lykilorð skal vera >1 stafur</string>
    <string name="login_failed">"Innskráning mistókst"</string>
    <string name="mustache">mustache</string>
    <string name="logout">Log out</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="confirm">Confirm</string>
    <string name="no_undo">Deleting this topic can not be undone.</string>
    <string name="show_creator_options">Show creator options</string>
    <string name="creator">Creator</string>
    <string-array name="creator_options">
        <item>Edit Topic</item>
        <item>Delete Topic</item>
    </string-array>
</resources>