<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:focusable="true"
    android:animateLayoutChanges="true"
    tools:context=".ui.TopicActivity"
    >

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/layout_group_chat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_topic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/Widget.AppCompat.Toolbar"
            app:popupTheme="@style/Theme.AppCompat.Light"
            android:visibility="visible"
            android:padding="5dp">
            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:maxWidth="150dp"
                android:layout_height="wrap_content"
                android:textSize="24dp"
                android:gravity="center_horizontal"
                android:text="@string/title"
                android:textColor="@color/white"
                app:layout_constraintTop_toBottomOf="@+id/layout_group_chat"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginStart="10dp" />

            <TextView
                android:id="@+id/description"
                android:layout_width="wrap_content"
                android:maxWidth="150dp"
                android:layout_height="wrap_content"
                android:text="@string/description"
                android:textColor="@color/white"
                app:layout_constraintTop_toBottomOf="@+id/title"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginStart="20dp" />

            <ImageButton
                android:id="@+id/show_creator_options"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_baseline_settings_24"
                android:layout_gravity="end"
                android:layout_marginRight="20dp"
                android:visibility="gone"
                android:contentDescription="@string/show_creator_options"
                android:background="@android:color/transparent"/>
        </androidx.appcompat.widget.Toolbar>


    </com.google.android.material.appbar.AppBarLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_gchat"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="16dp"
        app:layout_constrainedHeight="true"
        app:layout_constraintBottom_toTopOf="@+id/text_gchat_indicator"
        app:layout_constraintTop_toBottomOf="@+id/layout_group_chat" />

    <TextView
        android:id="@+id/text_gchat_indicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/view"
        app:layout_constraintStart_toStartOf="parent" />

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#e0e0e0"
        app:layout_constraintBottom_toTopOf="@+id/layout_gchat_chatbox" />

    <RelativeLayout
        android:id="@+id/layout_gchat_chatbox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <EditText
            android:layout_marginStart="16dp"
            android:id="@+id/edit_gchat_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toStartOf="@+id/button_gchat_send"
            android:background="@android:color/transparent"
            android:hint="Enter Message"
            android:inputType="text"
            android:maxLines="6"
            tools:ignore="Autofill" />

        <Button
            android:id="@+id/button_gchat_send"
            android:layout_width="75dp"
            android:layout_height="48dp"
            android:layout_alignParentEnd="true"
            android:background="?attr/selectableItemBackground"
            android:text="Send"
            android:textColor="@color/black" />

    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>